--- a/app-src/index.css
+++ b/app-src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #333333;
+  background-color: #aaaaaa;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
     Arial, sans-serif;
   padding: 0;
@@ -11,6 +11,53 @@ body {
   padding-top: 20px;
 }
 
-#video{
+#video {
   cursor: pointer;
+}
+
+.monitor-wrapper {
+  display: flex;
+  justify-content: center;
+  padding: 4em;
+}
+img {
+  width: 500px;
+}
+.monitor {
+  width: 600px;
+  height: 338px;
+  overflow-y: hidden;
+  border: solid 1em #333;
+  border-radius: 0.5em;
+}
+.monitor::-webkit-scrollbar {
+  width: 15px;
+}
+.monitor::-webkit-scrollbar-thumb {
+  background: #666;
+}
+::-webkit-scrollbar-track {
+  background-color: #888;
+}
+.stand:before {
+  content: "";
+  display: block;
+  position: relative;
+  background: #222;
+  width: 150px;
+  height: 50px;
+  top: 420px;
+  left: 235px;
+}
+.stand:after {
+  content: "";
+  display: block;
+  position: relative;
+  background: #333;
+  border-top-left-radius: 0.5em;
+  border-top-right-radius: 0.5em;
+  width: 300px;
+  height: 15px;
+  top: 50px;
+  left: 159px;
 }
