--- a/app-src/index.css
+++ b/app-src/index.css
@@ -20,9 +20,17 @@ body {
   justify-content: center;
   padding: 4em;
 }
+
+#renderCanvas {
+  width: 100%;
+  height: 100%;
+  touch-action: none;
+}
+
 img {
   width: 500px;
 }
+
 .monitor {
   width: 600px;
   height: 338px;
