--- a/app-src/index.css
+++ b/app-src/index.css
@@ -4,68 +4,10 @@ body {
     Arial, sans-serif;
   padding: 0;
   margin: 0;
-}
-
-body {
   text-align: center;
-  padding-top: 20px;
 }
 
-#video {
-  cursor: pointer;
-}
-
-.monitor-wrapper {
-  display: flex;
-  justify-content: center;
-  padding: 4em;
-}
-
-#renderCanvas {
-  width: 100%;
-  height: 100%;
-  touch-action: none;
-}
-
-img {
-  width: 500px;
-}
-
-.monitor {
-  width: 600px;
-  height: 338px;
-  overflow-y: hidden;
-  border: solid 1em #333;
-  border-radius: 0.5em;
-}
-.monitor::-webkit-scrollbar {
-  width: 15px;
-}
-.monitor::-webkit-scrollbar-thumb {
-  background: #666;
-}
-::-webkit-scrollbar-track {
-  background-color: #888;
-}
-.stand:before {
-  content: "";
-  display: block;
-  position: relative;
-  background: #222;
-  width: 150px;
-  height: 50px;
-  top: 420px;
-  left: 235px;
-}
-.stand:after {
-  content: "";
-  display: block;
-  position: relative;
-  background: #333;
-  border-top-left-radius: 0.5em;
-  border-top-right-radius: 0.5em;
-  width: 300px;
-  height: 15px;
-  top: 50px;
-  left: 159px;
+#videoSelectBtn {
+  position: absolute;
+  z-index: 99;
 }
