--- a/app-src/bundler-src/src/variables.css
+++ b/app-src/bundler-src/src/variables.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "CascadiaCode";
+  src: url("/fonts/CascadiaCode.ttf") format("truetype");
+}
+
 :root {
   --header-height: 80px;
   --footer-height: 70px;
