chore: adjust Logo theme reaction, refactor for reusable icon Button

--- a/app-src/bundler-src/src/core/IconButton/Button.css
+++ b/app-src/bundler-src/src/core/IconButton/Button.css
@@ -1,4 +1,4 @@
-.theme-toggle {
+.base-icon-button {
   text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   margin: 0;
@@ -30,6 +30,6 @@
   cursor: pointer;
 }
 
-.theme-toggle:hover {
+.base-icon-button:hover {
   background-color: var(--BGLighter);
 }
