--- a/app-src/bundler-src/src/variables.css
+++ b/app-src/bundler-src/src/variables.css
@@ -8,6 +8,7 @@
   --footer-height: 70px;
   --border-radius-sm: 3px;
   --scrollbar-width: 0.5rem;
+  --removed-scroll-width: 0px;
   --BG: #282a36;
   --FG: #f8f8f2;
   --SELECTION: #44475a;
