--- a/app-src/bundler-src/src/core/numberInput/index.css
+++ b/app-src/bundler-src/src/core/numberInput/index.css
@@ -1,14 +1,27 @@
+.number-wrapper {
+  text-size-adjust: 100%;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+  color: var(--FG);
+  word-break: break-word;
+  text-size-adjust: 100%;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+  color: var(--FG);
+  word-break: break-word;
+  line-height: 1.55;
+  box-sizing: border-box;
+  position: relative;
+}
+
 .number-input {
   text-size-adjust: 100%;
-  --mantine-header-height: 80px;
-  --mantine-navbar-width: 0px;
-  --mantine-footer-height: 70px;
   -webkit-font-smoothing: antialiased;
-  --removed-scroll-width: 0px;
   word-break: break-word;
   margin: 0;
   overflow: visible;
-  font-family: "Greycliff CF", sans-serif;
   height: 36px;
   -webkit-tap-highlight-color: transparent;
   line-height: 34px;
@@ -17,14 +30,104 @@
   box-sizing: border-box;
   font-size: 14px;
   width: 100%;
-  color: rgb(193, 194, 197);
+  color: var(--FG);
   display: block;
   text-align: left;
   min-height: 36px;
   padding-left: 12px;
   padding-right: 25px;
   border-radius: 4px;
-  border: 1px solid rgb(55, 58, 64);
-  background-color: rgb(37, 38, 43);
+  border: 1px solid var(--BORDER);
   transition: border-color 100ms ease 0s;
+  background-color: var(--BGDark);
+}
+
+.number-input:active {
+  border-color: var(--CYAN);
+  border-radius: 4px;
+}
+
+.number-input:focus {
+  border-color: var(--CYAN);
+  border-radius: 4px;
+  outline: none;
+}
+
+.number-input-button-section-wrapper {
+  text-size-adjust: 100%;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+  color: var(--FG);
+  word-break: break-word;
+  line-height: 1.55;
+  box-sizing: border-box;
+  position: absolute;
+  top: 0px;
+  bottom: 0px;
+  right: 0px;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  width: 25px;
+}
+
+.number-input-button-section {
+  text-size-adjust: 100%;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -webkit-tap-highlight-color: transparent;
+  color: var(--FG);
+  word-break: break-word;
+  line-height: 1.55;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 2px);
+  margin: 1px;
+  overflow: hidden;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.number-input-button {
+  cursor: pointer;
+  text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  word-break: break-word;
+  font-family: sans-serif;
+  font-size: 100%;
+  line-height: 1.15;
+  overflow: visible;
+  text-transform: none;
+  -webkit-appearance: button;
+  margin: 0px 1px 0px 0px;
+  position: relative;
+  flex: 0 0 50%;
+  display: flex;
+  -webkit-box-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 24px;
+  padding: 0px;
+  -webkit-tap-highlight-color: transparent;
+  border-width: 0px 0px 1px 1px;
+  border-bottom-style: solid;
+  border-bottom-color: var(--BORDER);
+  border-left-style: solid;
+  border-left-color: var(--BORDER);
+  border-top-style: initial;
+  border-top-color: initial;
+  border-right-style: initial;
+  border-right-color: initial;
+  background-color: transparent;
+  color: var(--FG);
+}
+
+.number-input-button:hover {
+  background-color: var(--BGLighter);
 }
